--- a/META.yml
+++ b/META.yml
@@ -22,8 +22,9 @@ no_index:
     - t
 requires:
   DBIx::Class: 0
+  SQL::Abstract: 0
   perl: 5.6.0
   version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.000
+version: 1.010
