--- a/META.yml
+++ b/META.yml
@@ -5,12 +5,15 @@ author:
 build_requires:
   Class::C3: 0
   DBD::SQLite: 0
+  ExtUtils::MakeMaker: 6.42
   Test::Exception: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
   Test::Warn: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.82'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,4 +30,4 @@ requires:
   version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.020
+version: 1.030
