--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.82'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,4 +30,5 @@ requires:
   version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.030
+  repository: git://github.com/maros/DBIx-Class-DeleteAction.git
+version: 1.040
